# college-management-system-backend

./: Cargo.toml  README.md  testing.session.sql
migrations/: 20260531180924_initial_schema.sql  20260604000000_add_academic_finance_modules.sql
src/: auth.rs  config.rs  db.rs  extractors.rs  lib.rs  main.rs
src/handlers/: admin_profile.rs  assessment.rs  attendance.rs  auth.rs  course.rs  dashboard.rs  fee.rs  grade.rs  mod.rs  notice.rs  report.rs  student.rs  timetable.rs
src/middleware/: auth.rs
src/models/: admin.rs  assessment.rs  attendance.rs  course.rs  dashboard.rs  fee.rs  grade.rs  mod.rs  notice.rs  report.rs  student.rs  timetable.rs
