[package]
name = "axum_back"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
argon2 = { version = "0.5.3", features = ["std"] }
axum = "0.8.9"
bcrypt = "0.19.1"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["runtime-async-std", "tls-rustls", "postgres", "chrono", "uuid"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.2", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
